--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "native-base": "^3.4.22",
     "react": "17.0.2",
     "react-native": "0.65.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-flash-message": "^0.1.13",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-indicators": "^0.17.0",
