--- a/package.json
+++ b/package.json
@@ -10,28 +10,26 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^5.14.3",
+    "@react-navigation/native": "6.0.13",
+    "@react-navigation/stack": "5.14.3",
     "async": "latest",
     "axios": "0.19.0",
-    "native-base": "^3.4.22",
+    "native-base": "3.4.22",
     "react": "17.0.2",
     "react-native": "0.65.0",
-    "react-native-fast-image": "^8.6.3",
-    "react-native-flash-message": "^0.1.13",
+    "react-native-flash-message": "0.1.13",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-indicators": "^0.17.0",
+    "react-native-indicators": "0.17.0",
     "react-native-modal": "11.5.1",
-    "react-native-reanimated": "^1.8.0",
+    "react-native-reanimated": "1.8.0",
     "react-native-responsive-screen": "1.4.1",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "^2.7.0",
-    "react-native-skeleton-content": "^1.0.28",
+    "react-native-screens": "2.7.0",
     "react-native-svg": "12.1.1",
-    "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "react-native-vector-icons": "9.2.0",
+    "react-redux": "7.2.0",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
